--- a/src/frontend/components/NavBar/NavBar.scss
+++ b/src/frontend/components/NavBar/NavBar.scss
@@ -1,4 +1,9 @@
 .main-nav {
    display: flex;
    justify-content: space-evenly;
+
+   &__menu-icon.MuiSvgIcon-root {
+      height: 2.5rem;
+      width: 2.5rem;
+   }
 }
