--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,7 +11,6 @@ body {
   font-size: 10px;
 }
 
-
 a {
   color: inherit;
   text-decoration: none;
@@ -20,3 +19,13 @@ a {
 td {
    width: auto;
 }
+
+.item-icon {
+   width: 3rem;
+   height: 3rem;
+}
+
+h1 { font-size: 2.3rem };
+h3 { font-size: 1.4rem };
+h4 { font-size: 1.3rem };
+h5 { font-size: 1rem };
