--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -25,6 +25,10 @@ td {
    height: 3rem;
 }
 
+span {
+   font-size: 1rem;
+}
+
 h1 { font-size: 2.3rem };
 h3 { font-size: 1.4rem };
 h4 { font-size: 1.3rem };
