--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -29,7 +29,11 @@ span {
    font-size: 1rem;
 }
 
-h1 { font-size: 2.3rem };
+h1 { font-size: 2.1rem };
 h3 { font-size: 1.4rem };
 h4 { font-size: 1.3rem };
 h5 { font-size: 1rem };
+
+ul {
+   list-style: none;
+}
