--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -4,6 +4,22 @@
 
    &__main {
       height: 100%;
+      
+   }
+
+   &__transaction-header {
+      margin: 2rem 0 1rem;
+      font-size: 6vw;
+   }
+
+   &__category-header {
+      margin: .5rem 1rem;
+      font-size: 4vw;
+   }
+
+   &__category-body {
+      margin-left: 2rem;
+      font-size: 3vw;
    }
 }
 
