--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,25 +1,65 @@
+@use '../styles/partials/mixins' as *; 
+
 .landing {
    height: 100vh;
    margin-bottom: 1rem;
 
-   &__main {
+   &__main.css-1oqqzyl-MuiContainer-root {
       height: 100%;
-      
+
+      @include desktop {
+         display: flex;
+      }
+   }
+
+   &__transactions {
+      @include desktop {
+         width: 40%;
+         padding-left: 2rem;
+         margin: 2rem;
+
+      }
+   }
+
+   &__transaction-category {
+      @include mobile2 {
+         width: 56rem;
+         margin: 0 auto;
+      }
    }
 
    &__transaction-header {
-      margin: 2rem 0 1rem;
+      margin: 3rem 0 1rem;
       font-size: 6vw;
+
+      @include mobile2 {
+         font-size: 3.5rem;
+      }
+
+      @include desktop {
+         font-size: 3.5vw;
+         margin-left: 1rem;
+      }
    }
 
    &__category-header {
       margin: .5rem 1rem;
       font-size: 4vw;
+
+      @include mobile2 {
+         font-size: 2.4rem;
+         margin: 1.5rem 2rem;
+      }
    }
 
    &__category-body {
       margin-left: 2rem;
       font-size: 3vw;
+
+      @include mobile2 {
+         font-size: 1.8rem;
+         margin-left: 3.5rem;
+      }
    }
 }
 
