--- a/src/frontend/components/NavBar/NavBar.scss
+++ b/src/frontend/components/NavBar/NavBar.scss
@@ -1,6 +1,25 @@
+@use '../../../styles/partials/mixins' as *;
+
 .main-nav {
    height: 16vw;
    max-height: 6.2rem;
+
+   @include mobile2 {
+      height: 7rem;
+      max-height: fit-content;
+   }
+
+   @include desktop {
+      max-height: fit-content;
+      justify-content: center;
+
+      // Navbar title
+      & .css-m5x0z-MuiTypography-root {
+         font-size: 1.8rem;
+         font-weight: bold;
+         font-family: Verdana, Geneva, Tahoma, sans-serif;
+      }
+   }
 
    &__menu-icon.css-i4bv87-MuiSvgIcon-root,
    &__add-btn.css-mm42gz-MuiButtonBase-root-MuiFab-root,
