--- a/src/pages/transaction/add.scss
+++ b/src/pages/transaction/add.scss
@@ -1,7 +1,14 @@
+@use '../../styles/partials/mixins' as *;
+
 .transaction-add {
 
    &__title {
       margin-bottom: 1rem;
+
+      @include mobile2 {
+         font-size: 2.8rem;
+         margin-top: 2rem;
+      }
    }
 
    // Category Radio Group header
@@ -17,6 +24,10 @@
       margin: 0 auto;
       text-align: justify;
       padding: 1rem 2rem 2rem;
+
+      @include mobile2 {
+         width: 50rem;
+      }
 
       // Labels
       & .css-1y5l3oi-MuiFormLabel-root,
@@ -63,9 +74,11 @@
 
       // Transaction Date input field 
       & .css-1xhypcz-MuiStack-root,
-      .css-1xhypcz-MuiStack-root {
+      .css-1xhypcz-MuiStack-root,
+      .css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
          padding-top: 0;
          overflow: visible;
+         width: 100%;
       }
 
       // Date Input Text
