--- a/src/styles/accounts.scss
+++ b/src/styles/accounts.scss
@@ -8,6 +8,12 @@
    align-items: flex-start;
    padding: 2rem;
 
+   @include desktop {
+      width: 60%;
+      align-items: center;
+      margin: 0 auto;
+   }
+
    &__title {
       border-bottom: 1px solid grey;
       padding-bottom: 1rem;
@@ -40,6 +46,10 @@
       flex-direction: column;
       position: absolute;
       right: 25%;
+
+      @include desktop {
+         right: 40%;
+      }
    }
 
    // Account edit button
@@ -72,5 +82,9 @@
       width: 60%;
       padding: .75rem;
       margin-bottom: 1rem;
+
+      @include desktop {
+         width: 25%;
+      }
    }
 }
