--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@use '../styles/partials/mixins' as *;
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -14,6 +16,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+
+  @include desktop {
+   font-size: 1.1rem;
+  }
 }
 
 td {
@@ -23,10 +29,6 @@ td {
 .item-icon {
    width: 3rem;
    height: 3rem;
-}
-
-span {
-   font-size: 1rem;
 }
 
 h1 { font-size: 2.1rem };
