--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -65,7 +65,8 @@
    // Icons and Adornments
    & .css-15yr02a-MuiSvgIcon-root,
    .css-1idedao-MuiSvgIcon-root,
-   .css-i4bv87-MuiSvgIcon-root {
+   .css-i4bv87-MuiSvgIcon-root,
+   .css-13qu1ns-MuiSvgIcon-root {
 
       @include desktop {
          width: 2.25rem;
