--- a/src/frontend/components/Calendar/Calendar.scss
+++ b/src/frontend/components/Calendar/Calendar.scss
@@ -2,23 +2,23 @@
 
 .calendar.MuiDateCalendar-root {
    width: 100%;
+   height: 100vw;
    max-height: 100%;
-   padding-bottom: 4vw;
    margin-top: 3vw;
    margin-bottom: 2vw;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    border-radius: .7rem;
 
    @include mobile2 {
-      padding-bottom: 2.3rem;
       margin-top: 3rem;
       margin-bottom: 2rem;
       width: 56rem;
+      height: 54rem;
    }
 
    @include desktop {
-      height: 55vh;
-      padding-bottom: 4rem;
+      max-height: 52.5rem;
+      max-width: 55rem;
    }
 
    & .MuiPickersCalendarHeader-root {
